Changes since 3-1-3:
- port to SunStudio complier on linux (./configure --without-dl)
- fixes to ssiLinks: can also transmit newstruct
- added to newstruct: for each rin-dep. member a an additional,
  read-only member r_a iis added (the ring a is in) 
- degBound also for non-commutive rings
- added all that libs that missed the 3-1-3 deadline
- Di 26. Apr 12:07:06 CEST 2011: 3-1-3-1

Do 7. Apr 2011
Release 3-1-3

