@@ -1,6 +1,1 @@
-/*
-
-*/
-
-/* define this if we pack a distribution */
-/* #undef MAKE_DISTRIBUTION */
+#undef MAKE_DISTRIBUTION 
